# apps/api/app/Modules/Identity/Domain/Models/Organization.php
@@ -1,0 +1,23 @@
+<?php
+
+namespace App\Modules\Identity\Domain\Models;
+
+use App\Models\User;
+use Database\Factories\OrganizationFactory;
+use Illuminate\Database\Eloquent\Attributes\Fillable;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\HasOne;
+
+#[Fillable(['name'])]
+class Organization extends Model
+{
+    /** @use HasFactory<OrganizationFactory> */
+    use HasFactory;
+
+    /** @return HasOne<User, $this> */
+    public function user(): HasOne
+    {
+        return $this->hasOne(User::class);
+    }
+}
